# LidarObjectTracking

./: .gitignore  CMakeLists.txt  ReadMe.md  package.xml
include/lidar_object_tracking/: box_vis.hpp  cell.hpp  component_clustering.hpp  gauss_blur.hpp  ground_removal.hpp
launch/: lidar_detection_launch.py
params/: lidar_detection_params.yaml
rviz/: cluster.rviz  ground.rviz
src/clustering/: component_clustering.cpp  component_clustering_node.cpp
src/ground_removal/: cell.cpp  gauss_blur.cpp  ground_removal.cpp  ground_removal_node.cpp
src/visualization/: box_vis.cpp  box_vis_node.cpp
